[tool.poetry]
name = "CASHTAB API"
version = "0.0.1"
description = ""
authors = ["TheBreadEnergy <thebreadenergy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
email-validator = "^2.2.0"
fastapi = "^0.111.1"
fastapi-cache2 = "^0.2.1"
gunicorn = "^22.0.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
redis = "^5.0.7"
sqlalchemy = "^2.0.31"
tinkoff-investments = "^0.2.0b103"
tomli = "^2.0.1"
uvicorn = "^0.30.1"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
flake8 = "^7.0.0"
flake8-isort = "^6.1.0"
pre-commit = "^3.6.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
